<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.qa</groupId>
	<artifactId>DEMOWEBUITEST</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>DemoWebUiTest</name>
	
	
	<modules>
		<module>DemoProject</module>
		<module>COREENGINE</module>
	</modules>
	
	

	<build>
		<pluginManagement>

			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<generateBackupPoms>false</generateBackupPoms>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-toolchains-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.8</source>
						<target>1.8</target>

					</configuration>
					<executions>
						<execution>
							<id>test-compile</id>
							<phase>test-compile</phase>
							<goals>
								<goal>testCompile</goal>
							</goals>
							<configuration>
								<sources>
									<fileset>
										<directory>${project.basedir}/src/test</directory>
									</fileset>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>



				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>

				<!-- Following plugin executes the TestNg tests -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<executions>
						<execution>
							<id>surefire-it</id>
							<phase>integration-test</phase>
							<goals>
								<goal>test</goal>
							</goals>

						</execution>

					</executions>
					<configuration>
						<skip>false</skip>
						<testFailureIgnore>true</testFailureIgnore>
						<suiteXmlFiles>
						<!--><suiteXmlFile>./src/test/resources/testSuites/${testsuite}.xml</suiteXmlFile--> 
						<suiteXmlFile>MyMasterSuite.xml</suiteXmlFile> 
						
						</suiteXmlFiles> 
					</configuration>

				</plugin>


				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.11</version>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
					<executions>
						<execution>
							<id>failsafe-mail</id>
							<phase>verify</phase>
							<goals>
								<goal>integration-test</goal>
							</goals>

						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.3.2</version>
					<executions>
						<execution>
							<goals>
								<goal>java</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<argLine>-Dfile.encoding=UTF-8</argLine>

						<killAfter>-1</killAfter>
						<mainClass>com.test.Tests.RunAllTest</mainClass>
						<cleanupDaemonThreads>false</cleanupDaemonThreads>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

	<reporting>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.11</version>
				<reportSets>
					<reportSet>
						<id>integration-tests</id>
						<reports>
							<report>failsafe-report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.2</version>
			</plugin>
		</plugins>

	</reporting>

</project>